fixed amin panel and some other stuff

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -42,7 +42,7 @@
     "emptyone": "You have no quizzes",
     "emptytwo": "Go ahead create a new quiz",
     "title": "Quizzes",
-    "search": "Search your quiz",
+    "search": "Search your quizzes...",
     "share": "Share your quiz",
     "edit": "Edit",
     "delete": "Delete quiz"
